# Hematite

./: Cargo.toml
.github/workflows/: release.yml
config/: version.json
crates/hematite-cli/src/: args.rs  banner.rs  hash_downloader.rs  interactive.rs  logging.rs  main.rs  process.rs  ui.rs  version_check.rs
crates/hematite-core/: Cargo.toml
crates/hematite-core/src/: assets.rs  context.rs  lib.rs  repath.rs  seeds.rs
crates/hematite-core/src/detect/: rules.rs
crates/hematite-core/src/transform/: mod.rs  replace_ext.rs  split_entries.rs  vfx_shape.rs
crates/hematite-core/src/wad_pipeline/: detect.rs  mod.rs  transform.rs
crates/hematite-ltk/src/: convert.rs  fix_dimensions.rs  lib.rs  lmdb_hash_adapter.rs  strip_mipmaps.rs  wad_adapter.rs
crates/hematite-types/src/: config.rs  repath.rs
