[workspace]
resolver = "2"
members = [
    "crates/hematite-types",
    "crates/hematite-core",
    "crates/hematite-ltk",
    "crates/hematite-cli",
]

[workspace.package]
version = "0.4.0"
edition = "2021"
authors = ["SirDexal"]


[workspace.dependencies]
# Shared across crates
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
indexmap = { version = "2.7", features = ["serde"] }

# Internal crates
hematite-types = { path = "crates/hematite-types" }
hematite-core = { path = "crates/hematite-core" }
hematite-ltk = { path = "crates/hematite-ltk" }
